Fixes issue #636 - Refactor Resource* into its own API